[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/wizard-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=3]
[ext_resource path="res://src/spells/SpellManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/modules/KnockbackModule.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/modules/BloodParticlesModule.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Crosshair.gd" type="Script" id=7]
[ext_resource path="res://src/ui/PlayerUI.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 24, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 72, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 1 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.5
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "sit",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 8.0
height = 5.0

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "die"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 17 )

[node name="Crosshair" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 28.0636, 0 )
z_index = 201
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Crosshair"]
position = Vector2( 0.5, 0 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="SpellManager" parent="." instance=ExtResource( 4 )]

[node name="KnockbackModule" parent="." instance=ExtResource( 5 )]
body_path = NodePath("..")

[node name="BloodParticlesModule" parent="." instance=ExtResource( 6 )]
blood_color = Color( 0.407843, 0.219608, 0.423529, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 18 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource( 8 )]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
